<resources>
    <string name="app_name">Fit Diary</string>
    <string name="welcome"> Welcome in Fit Diary</string>
    <string name="register"> Register</string>
    <string name="sign"> Sign in</string>
    <string name="login"> Login</string>
    <string name="email"> E-mail</string>
    <string name="password"> Password (at least 6 characters)</string>
    <string name="create"> Create an account</string>
    <string name="workout"> Workout</string>
    <string name="diet"> Diet</string>
    <string name="ok"> OK</string>
    <string name="exercise">create new exercise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
